--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "gulp": "^3.9.0",
+    "gulp-exec": "^2.1.2",
     "gulp-livereload": "^3.8.1",
     "gulp-nodemon": "^2.0.4",
     "gulp-typescript": "^2.10.0"
