--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-exec": "^2.1.2",
     "gulp-livereload": "^3.8.1",
     "gulp-nodemon": "^2.0.4",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-typescript": "^2.10.0"
   },
   "scripts": {
